--- a/springmvc/src/main/resources/application.properties
+++ b/springmvc/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 #Especificamos el perfil que usamos en los servicios para usar como persistencia Map o Base de Datos
 #spring.profiles.active=jpadaotest
 spring.profiles.active=jpadao
